{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 25,
  "lineage": "feaebaf9-7fec-08ae-54a0-403706951620",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054b58e0b3897562b",
            "arn": "arn:aws:ec2:us-east-2:339713112256:elastic-ip/eipalloc-054b58e0b3897562b",
            "domain": "vpc",
            "id": "eipalloc-054b58e0b3897562b",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-128-244-119.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.244.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP"
            },
            "tags_all": {
              "Name": "EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:339713112256:instance/i-0fe5535b4e40787b5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe5535b4e40787b5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-070aebd08749b641d",
            "private_dns": "ip-10-0-3-5.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.5",
            "public_ip": "13.59.220.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c2008151cfa3ec06",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3f3082df0e8eb85",
            "tags": {
              "Name": "private_instance-1"
            },
            "tags_all": {
              "Name": "private_instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5851764f0bb4fcc"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.functionloopvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:339713112256:instance/i-0fe10c2240fdefd41",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe10c2240fdefd41",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09725c2c898e4a8a7",
            "private_dns": "ip-10-0-4-8.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.8",
            "public_ip": "3.12.104.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bcd6b3a0d59196d5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c0b2a971f5259c1",
            "tags": {
              "Name": "private_instance-2"
            },
            "tags_all": {
              "Name": "private_instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5851764f0bb4fcc"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.functionloopvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:339713112256:instance/i-0063e1c3e551da2df",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0063e1c3e551da2df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02b16a83231e4885e",
            "private_dns": "ip-10-0-5-5.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.5",
            "public_ip": "18.218.219.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-021ab64a5ac94e14a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c41b430f7ab4bf87",
            "tags": {
              "Name": "private_instance-3"
            },
            "tags_all": {
              "Name": "private_instance-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5851764f0bb4fcc"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.functionloopvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:339713112256:instance/i-020e22de82b22cef1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020e22de82b22cef1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02ad515141910b6b7",
            "private_dns": "ip-10-0-0-13.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.13",
            "public_ip": "52.15.158.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06abbfbbd6995651b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e032c8da244065a",
            "tags": {
              "Name": "public_instance-1"
            },
            "tags_all": {
              "Name": "public_instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5851764f0bb4fcc"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.functionloopvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:339713112256:instance/i-038d18cc05259912d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038d18cc05259912d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0694472d41a12ded8",
            "private_dns": "ip-10-0-1-6.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.6",
            "public_ip": "18.117.85.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e87274626bdce034",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058f665bc1cb2b13e",
            "tags": {
              "Name": "public_instance-2"
            },
            "tags_all": {
              "Name": "public_instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5851764f0bb4fcc"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.functionloopvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:339713112256:instance/i-0627f3dd8b1d54649",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0627f3dd8b1d54649",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0726bf25ddf7a42e8",
            "private_dns": "ip-10-0-2-13.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.13",
            "public_ip": "18.118.107.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-031811652736a751e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b7ce264b02a4742",
            "tags": {
              "Name": "public_instance-3"
            },
            "tags_all": {
              "Name": "public_instance-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5851764f0bb4fcc"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.functionloopvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "PublicIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:internet-gateway/igw-020024648283ae967",
            "id": "igw-020024648283ae967",
            "owner_id": "339713112256",
            "tags": {
              "Name": "PublicIGW"
            },
            "tags_all": {
              "Name": "PublicIGW"
            },
            "vpc_id": "vpc-042c91dae27805633"
          },
          "dependencies": [
            "aws_vpc.functionloopvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054b58e0b3897562b",
            "association_id": "eipassoc-06e4885a3310b0c5a",
            "connectivity_type": "public",
            "id": "nat-0de3ba051b013069f",
            "network_interface_id": "eni-07ea3bd382499b618",
            "private_ip": "10.0.0.14",
            "public_ip": "3.128.244.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00e032c8da244065a",
            "tags": {
              "Name": "NATGW"
            },
            "tags_all": {
              "Name": "NATGW"
            }
          },
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_internet_gateway.PublicIGW",
            "aws_subnet.public_subnets",
            "aws_vpc.functionloopvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:route-table/rtb-0fa5ca33bd9efdc4a",
            "id": "rtb-0fa5ca33bd9efdc4a",
            "owner_id": "339713112256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0de3ba051b013069f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "functionloopvpc-PrivateRT"
            },
            "tags_all": {
              "Name": "functionloopvpc-PrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-042c91dae27805633"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_internet_gateway.PublicIGW",
            "aws_nat_gateway.NATGW",
            "aws_subnet.public_subnets",
            "aws_vpc.functionloopvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:route-table/rtb-0d9c52751108e2697",
            "id": "rtb-0d9c52751108e2697",
            "owner_id": "339713112256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020024648283ae967",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "functionloopvpc-PubRT"
            },
            "tags_all": {
              "Name": "functionloopvpc-PubRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-042c91dae27805633"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.PublicIGW",
            "aws_vpc.functionloopvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTAssociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f071f2b482bb883e",
            "route_table_id": "rtb-0fa5ca33bd9efdc4a",
            "subnet_id": "subnet-0d3f3082df0e8eb85"
          },
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_internet_gateway.PublicIGW",
            "aws_nat_gateway.NATGW",
            "aws_route_table.PrivateRT",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.functionloopvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077e0a207e59f865f",
            "route_table_id": "rtb-0fa5ca33bd9efdc4a",
            "subnet_id": "subnet-06c0b2a971f5259c1"
          },
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_internet_gateway.PublicIGW",
            "aws_nat_gateway.NATGW",
            "aws_route_table.PrivateRT",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.functionloopvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cfd2550808e476b",
            "route_table_id": "rtb-0fa5ca33bd9efdc4a",
            "subnet_id": "subnet-0c41b430f7ab4bf87"
          },
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_internet_gateway.PublicIGW",
            "aws_nat_gateway.NATGW",
            "aws_route_table.PrivateRT",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.functionloopvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTAssociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3ead0497c6880b8",
            "route_table_id": "rtb-0d9c52751108e2697",
            "subnet_id": "subnet-00e032c8da244065a"
          },
          "dependencies": [
            "aws_internet_gateway.PublicIGW",
            "aws_route_table.PubRT",
            "aws_subnet.public_subnets",
            "aws_vpc.functionloopvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fedf9c4360e10d10",
            "route_table_id": "rtb-0d9c52751108e2697",
            "subnet_id": "subnet-058f665bc1cb2b13e"
          },
          "dependencies": [
            "aws_internet_gateway.PublicIGW",
            "aws_route_table.PubRT",
            "aws_subnet.public_subnets",
            "aws_vpc.functionloopvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dce1af6e252db55",
            "route_table_id": "rtb-0d9c52751108e2697",
            "subnet_id": "subnet-08b7ce264b02a4742"
          },
          "dependencies": [
            "aws_internet_gateway.PublicIGW",
            "aws_route_table.PubRT",
            "aws_subnet.public_subnets",
            "aws_vpc.functionloopvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-0d3f3082df0e8eb85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3f3082df0e8eb85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "functionloopvpc-privatesub-us-east-2a"
            },
            "tags_all": {
              "Name": "functionloopvpc-privatesub-us-east-2a"
            },
            "vpc_id": "vpc-042c91dae27805633"
          },
          "dependencies": [
            "aws_vpc.functionloopvpc"
          ]
        },
        {
          "index_key": "us-east-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-06c0b2a971f5259c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c0b2a971f5259c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "functionloopvpc-privatesub-us-east-2b"
            },
            "tags_all": {
              "Name": "functionloopvpc-privatesub-us-east-2b"
            },
            "vpc_id": "vpc-042c91dae27805633"
          },
          "dependencies": [
            "aws_vpc.functionloopvpc"
          ]
        },
        {
          "index_key": "us-east-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-0c41b430f7ab4bf87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.5.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c41b430f7ab4bf87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "functionloopvpc-privatesub-us-east-2c"
            },
            "tags_all": {
              "Name": "functionloopvpc-privatesub-us-east-2c"
            },
            "vpc_id": "vpc-042c91dae27805633"
          },
          "dependencies": [
            "aws_vpc.functionloopvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-00e032c8da244065a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e032c8da244065a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "functionloopvpc-pubsub-us-east-2a"
            },
            "tags_all": {
              "Name": "functionloopvpc-pubsub-us-east-2a"
            },
            "vpc_id": "vpc-042c91dae27805633"
          },
          "dependencies": [
            "aws_vpc.functionloopvpc"
          ]
        },
        {
          "index_key": "us-east-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-058f665bc1cb2b13e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058f665bc1cb2b13e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "functionloopvpc-pubsub-us-east-2b"
            },
            "tags_all": {
              "Name": "functionloopvpc-pubsub-us-east-2b"
            },
            "vpc_id": "vpc-042c91dae27805633"
          },
          "dependencies": [
            "aws_vpc.functionloopvpc"
          ]
        },
        {
          "index_key": "us-east-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-08b7ce264b02a4742",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b7ce264b02a4742",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "functionloopvpc-pubsub-us-east-2c"
            },
            "tags_all": {
              "Name": "functionloopvpc-pubsub-us-east-2c"
            },
            "vpc_id": "vpc-042c91dae27805633"
          },
          "dependencies": [
            "aws_vpc.functionloopvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "functionloopvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:vpc/vpc-042c91dae27805633",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b035b08765a10d28",
            "default_route_table_id": "rtb-05a6426a184d893ac",
            "default_security_group_id": "sg-0a5851764f0bb4fcc",
            "dhcp_options_id": "dopt-0e363e00aa4ec7887",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042c91dae27805633",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05a6426a184d893ac",
            "owner_id": "339713112256",
            "tags": {
              "Name": "functionloopvpc"
            },
            "tags_all": {
              "Name": "functionloopvpc"
            }
          }
        }
      ]
    }
  ]
}